--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-header {
+.App {
   background-color: #a6bff2;
   min-height: 100vh;
 
@@ -10,19 +10,5 @@
 .heading{
   font-size:40px;
   text-transform: uppercase;   
-}
-.title{
-  margin-top: 20px;
-  width: 500px;
-  height:30px;
-  font-size: 20px;
-}
-.submitBtn{
-  height:38px;
-  width:90px;
-
-}
-.submitBtn:hover{
-  background-color: greenyellow;
 }
 
