--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,12 @@
 .App {
-  text-align: center;
-}
-
-.App {
   background-color: #a6bff2;
   min-height: 100vh;
 
 }
 .heading{
   font-size:40px;
-  text-transform: uppercase;   
+  text-transform: uppercase; 
+  display: flex;
+  justify-content: center;
 }
 
