--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -1,3 +1,14 @@
+.todoForm{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+ 
+}
+.form{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .title{
     margin-top: 20px;
     width: 500px;
@@ -7,6 +18,7 @@
   .submitBtn{
     height:38px;
     width:90px;
+    margin-top: 20px;
   
   }
   .submitBtn:hover{
