--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: center;
 }
-.todoTitle{
+/* //use css modules  bem  , use em or rem */ 
+.todoTitle{ 
     width: 500px;
     height: 30px;
     margin-top: 7px;
@@ -21,6 +22,7 @@
 }
 .dropdown{  
     display: flex;
+    background: rgb(186, 113, 113);
     flex-direction: row;
     justify-content: center;
     margin-left: 690px;
